
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY("tscore")
ADD_SUBDIRECTORY("tsgraphics")
ADD_SUBDIRECTORY("tsengine")

SET_TARGET_PROPERTIES(tscore PROPERTIES FOLDER engine)
SET_TARGET_PROPERTIES(tsgraphics PROPERTIES FOLDER engine)
SET_TARGET_PROPERTIES(tsengine PROPERTIES FOLDER engine)